# time-humanize

./: .gitignore  Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: docs.yml  publish-docs.yml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/time_humanize/: trait.FromTime.js
src/: humantime.rs  lib.rs
src/time_humanize/: humantime.rs.html  lib.rs.html
tests/: humanize.rs  present.rs  rough.rs
time_humanize/: all.html  enum.Accuracy.html  enum.Tense.html  index.html  sidebar-items.js  struct.HumanTime.html  trait.FromTime.html
time_humanize/humantime/: enum.Accuracy.html  enum.Tense.html  struct.HumanTime.html  trait.FromTime.html
